--- a/views/pages/auth.ejs
+++ b/views/pages/auth.ejs
@@ -15,7 +15,7 @@
       <div class="jumbotron text-center text-black">
         <h1><span class="fa fa-lock"></span> Social Authentication</h1>
         <p>Login or Register with:</p>
-        <a href="/google" class="btn btn-danger">
+        <a href="/google" class="btn btn-warning">
           <span class="fa fa-google"></span> SignIn with Google
         </a>
         <a href="/facebook" class="btn btn-primary">
